Versión Final R3. Publicada en el 18. Funcionalidad Completa.

--- a/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Acreditar.cshtml
@@ -19,7 +19,7 @@
 
                 <div class="panel-body">
 
-                    <form action="@Url.Action("Acreditar", "Afiliado")" name="form" method="post">
+                    <form action="@Url.Action("Acreditar", "Afiliado")" name="form" method="post" onsubmit="return ValidarMonto();">
 
                         <div class="form-group">
 
@@ -41,6 +41,7 @@
                             </div>
                             <div class="editor-field col-md-6">
                                 @Html.TextBox("Monto", "", new { @class = "form-control" })
+                                <span id="monto"></span>
                             </div>
 
                         </div>
@@ -74,4 +75,37 @@
 
 </div>
 <!-- container -->
+<script type="text/javascript">
+    document.getElementById("Monto").focus();
+
+    function ValidarMonto() {
+        var valor = document.getElementById('Monto').value;
+        var RegExPattern = /^(\d){1,3}$/;
+
+        if (RegExPattern.test(valor) == false) {
+            spanMessage();
+            document.getElementById('Monto').value = "";
+            document.form.Monto.focus();
+            return false;
+        }
+        else {
+            if (valor <= 0)
+            {
+                spanMessage();
+                document.getElementById('Monto').value = "";
+                document.form.Monto.focus();
+                return false;
+            }
+        }
+        return true;
+    }
+
+    function spanMessage() {
+        var span = document.getElementById('monto');
+        while (span.firstChild) {
+            span.removeChild(span.firstChild);
+        }
+        span.appendChild(document.createTextNode("* Formato Monto Incorrecto: Sólo números, máximo 3 dígitos, mayor que cero (0)"));
+    }
+</script>
 
