--- a/Suma2Lealtad/Views/Afiliado/Filter.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Filter.cshtml
@@ -19,10 +19,14 @@
 
                 <div class="panel-body">
 
-                    <div class="editor-label col-md-4 control-label"> <br /> </div>
-                    <div class="editor-field col-md-8"> <br /> </div>
+                    <div class="editor-label col-md-4 control-label">
+                        <br />
+                    </div>
+                    <div class="editor-field col-md-8">
+                        <br />
+                    </div>
 
-                    <form action="@Url.Action("Find", "Afiliado")" name="form" method="post" onsubmit="return validatePass();">
+                    <form action="@Url.Action("Find", "Afiliado")" name="form" method="post" onsubmit="return validarDocumento();">
 
                         <div class="editor-label col-md-4 control-label">
                             Número de Documento :
@@ -33,8 +37,12 @@
                             <span id="someID"></span>
                         </div>
 
-                        <div class="editor-label col-md-4 control-label"> <br /> </div>
-                        <div class="editor-field col-md-8"> <br /> </div>
+                        <div class="editor-label col-md-4 control-label">
+                            <br />
+                        </div>
+                        <div class="editor-field col-md-8">
+                            <br />
+                        </div>
 
                         <div class="form-group">
                             <div class="col-md-12 col-btn">
@@ -44,8 +52,12 @@
                             </div>
                         </div>
 
-                        <div class="editor-label col-md-4 control-label"> <br /> </div>
-                        <div class="editor-field col-md-8"> <br /> </div>
+                        <div class="editor-label col-md-4 control-label">
+                            <br />
+                        </div>
+                        <div class="editor-field col-md-8">
+                            <br />
+                        </div>
 
                     </form>
 
@@ -62,26 +74,43 @@
     <!--// row -->
 
     <script type="text/javascript">
+        function validarDocumento() {
+            var valor = document.getElementById('numdoc').value.trim();
+            var RegExPattern = /^([VvEeJjGg]){1}(-){1}(\d){3,10}$/;
+            var RegExPattern2 = /^([VvEeJjGg]){1}(\d){3,10}$/;
+            var RegExPattern3 = /^([Pp]){1}(-){1}([A-Za-z0-9]){3,10}$/;
+            var RegExPattern4 = /^([Pp]){1}([A-Za-z0-9]){3,10}$/;
 
-        function validatePass() {
-
-            var patron1 = /^(V|E|J|G)\-\d{6,8}$/
-
-            if (document.form.numdoc.value.search(patron1) == -1) {
+            if (RegExPattern.test(valor) == false && RegExPattern2.test(valor) == false && RegExPattern3.test(valor) == false && RegExPattern4.test(valor) == false) {
                 spanMessage();
+                document.getElementById('numdoc').value = " ";
                 document.form.numdoc.focus();
                 return false;
+            }
+            else if (RegExPattern.test(valor) != false) {
+                document.getElementById('numdoc').value = valor.toUpperCase();
+                return true;
+            }
+            else if (RegExPattern2.test(valor) != false) {
+                document.getElementById('numdoc').value = valor.substring(0, 1).toUpperCase() + "-" + valor.substring(1).toUpperCase();
+                return true;
+            }
+            else if (RegExPattern3.test(valor) != false) {
+                document.getElementById('numdoc').value = valor.toUpperCase();
+                return true;
+            }
+            else if (RegExPattern4.test(valor) != false) {
+                document.getElementById('numdoc').value = valor.substring(0, 1).toUpperCase() + "-" + valor.substring(1).toUpperCase();
+                return true;
             }
         }
 
         function spanMessage() {
-
             var span = document.getElementById('someID');
             while (span.firstChild) {
                 span.removeChild(span.firstChild);
             }
             span.appendChild(document.createTextNode("* Formato Número de Documento Incorrecto. (V-12345678)"));
-
         }
     </script>
 
