--- a/Suma2Lealtad/Views/Shared/_Layout.cshtml
+++ b/Suma2Lealtad/Views/Shared/_Layout.cshtml
@@ -139,6 +139,10 @@
 
             maritalstatus: { valueNotEquals: "0" },
 
+            file: {
+                required: true,
+            },
+
             cod_estado: { valueNotEquals: " " },
 
             cod_ciudad: { valueNotEquals: " " },
