--- a/Suma2Lealtad/Views/Afiliado/PinPadCrearPin.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/PinPadCrearPin.cshtml
@@ -8,7 +8,7 @@
 
     <div class="row">
 
-        <div class="col-md-7 col-md-offset-2">
+        <div class="col-md-push-2 col-md-8">
 
             <div class="panel panel-default">
 
@@ -17,6 +17,44 @@
                 </div>
 
                 <div class="panel-body">
+
+                    <div class="form-group">
+
+                        <div class="editor-label col-md-4 control-label">
+                            Nombre del Afiliado :
+                        </div>
+                        <div class="editor-form col-md-6">
+                            @Html.TextBox("name", @Model.name + " " + @Model.lastname1, new { @class = "form-control", @readonly = "true" })
+                        </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Número de Documento/Cédula :
+                        </div>
+                        <div class="editor-form col-md-6">
+                            @Html.TextBox("docnumber", @Model.docnumber, new { @class = "form-control", @readonly = "true" })
+                        </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Número de Tarjeta :
+                        </div>
+                        <div class="editor-form col-md-6">
+                            @Html.TextBox("pan", @Model.pan, new { @class = "form-control", @readonly = "true" })
+                        </div>
+                        <div class="editor-label col-md-4 control-label">
+                            Estatus de Tarjeta :
+                        </div>
+                        <div class="editor-form col-md-6">
+                            @Html.TextBox("estatustarjeta", @Model.estatustarjeta, new { @class = "form-control", @readonly = "true" })
+                        </div>
+
+                        <div class="editor-label col-md-4 control-label">
+                        </div>
+
+                        <div class="editor-field col-md-6">
+                            <p class="text-left text-danger">
+                                Presone el botón Activar PinPad, y siga las instrucciones en la pantalla del dispositivo.
+                            </p>
+                        </div>
+
+                    </div>
 
                     <!-- btn btn-success -->
                     <div class="col-md-12 col-btn">
